[package]
name = "rs-masscode"
version = "0.1.0"
edition = "2021"

[dependencies]
mini-v8 = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "4.5"

[[bin]]
name = "rsmasscode" 
path = "src/main.rs" 

# Library target configuration
[lib]
name = "rs_masscode" 
path = "src/lib.rs" 