[package]
name = "rs-masscode"
version = "0.2.0"
edition = "2021"
description = "rs-masscode is a command line tool and library for masscode (querying)"
license = "MIT"
readme = "README.md"

[dependencies]
mini-v8 = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "4.5"

[[bin]]
name = "rsmasscode" 
path = "src/main.rs" 

# Library target configuration
[lib]
name = "rs_masscode" 
path = "src/lib.rs" 